--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-public/assets/fontawesome/
-public/assets/css/main.css.map
-public/assets/js/scripts.min.js
+public/assets/js/other.json
 public/assets/js/data-template.txt
